tests/idris2/error/perror005/PError.idr
foo : Int -> Int
foo x = x

bar : Int -> Int
bar x = let y = 42

baz : Int -> Int
baz x = x
